--- a/android学习/1.CompileSystem/09.macros.md
+++ b/android学习/1.CompileSystem/09.macros.md
@@ -17,6 +17,7 @@ out/target/product/xxx/system/bin       TARGET_OUT_EXECUTABLES
 out/target/product/xxx/root           TARGET_OUT_ROOT
 out/target/product/xxx/symbols        TARGET_OUT_UNSTRIPPED
 
+##$(BUILD_SYSTEM)目录中，也就是build/core目录中
 
 ##TOPDIR
 
