update compile system

--- a/01.android_system/01.CompileSystem/10.call_functions.md
+++ b/01.android_system/01.CompileSystem/10.call_functions.md
@@ -3,27 +3,40 @@
 
 获得本地目录
 
+$(call 目录，目录….) 目录引入操作符:   如该目录下有个文件夹名称 src，则可以这样写 $(call src)，那么就会得到 src 目录的完整路径
+
+在Android.mk文件的开始位置定义
+LOCAL_PATH :=$(call my-dir)
+
+
+
+
 ##inherit-product-if-exists
 
 $(call inherit-product-if-exists, device/.../xxx.mk)#指把xxx.mk(xxx.mk要存在)中的变量添加进来
 
 ##$(call inherit-product, device/.../xxx.mk) #指把xxx.mk中的变量添加进来
 
+##all-makefiles-under
 
-##DEVICE_PACKAGE_OVERLAYS := device/.../overlay #指定目录下的资源替换系统的资源
+include $(call all-makefiles-under,$(LOCAL_PATH))
+
+##all-subdir-makefiles
+
+include $(call all-subdir-makefiles)
+
+单独使用，用于包含子目录下的android.mk
+返回一个Android.mk文件所在位置的列表，以及当前的my-dir的路径。比如
+sources/foo/Android.mk
+sources/foo/lib1/Android.mk
+sources/foo/lib2/Android.mk
+
+如果sources/foo/Android.mk包含了这行语句
+include $(call all-subdir-makefiles)
+
+那么，它将会自动将sources/foo/lib1/Android.mk和sources/foo/lib2/Android.mk包含进来。
 
 
-##PRODUCT_COPY_FILES
+##all-java-files-under
 
-PRODUCT_COPY_FILES += \    #指定拷贝内容：源——>目标
- source_path:destination_path
-
-##PRODUCT_PROPERTY_OVERRIDES
-
-PRODUCT_PROPERTY_OVERRIDES += \   #
- key=value
-
-##PRODUCT_PACKAGES
-
-PRODUCT_PACKAGES += \    #定制软件
- xxx
+LOCAL_SRC_FILES := $(call all-java-files-under, src)
