--- a/01.android_system/01.CompileSystem/02.1.模块使用变量.md
+++ b/01.android_system/01.CompileSystem/02.1.模块使用变量.md
@@ -58,7 +58,28 @@ platform, media, presigned
 
 ##LOCAL_MODULE_TAGS：
 
-当前模块所包含的标签，一个模块可以包含多个标签。标签的值可能是 debug, eng, user，development 或者 optional。其中，optional 是默认标签。标签是提供给编译类型使用的。不同的编译类型会安装包含不同标签的模块。
+当前模块所包含的标签，一个模块可以包含多个标签。标签的值可能是 debug, eng, user，development 或者 optional。其中，optional 是默认标签。标签是提供给编译类型使用的。不同的编译类型会安装包含不同标签的模块
+
+
++ debug	默认类型，该编译类型适用于开发阶段。
+当选择这种类型时，编译结果将：
+
+    安装包含 eng, debug, user，development 标签的模块
+    安装所有没有标签的非 APK 模块
+    安装所有产品定义文件中指定的 APK 模块
+
++ user	该编译类型适合用于最终发布阶段。
+当选择这种类型时，编译结果将：
+
+    安装所有带有 user 标签的模块
+    安装所有没有标签的非 APK 模块
+    安装所有产品定义文件中指定的 APK 模块，APK 模块的标签将被忽略
+
++ userdebug	该编译类型适合用于 debug 阶段。
+该类型和 user 一样，除了：
+
+    会安装包含 debug 标签的模块
+    编译出的系统具有 root 访问权限
 
 ##LOCAL_MODULE_PATH
 
