--- a/01.android_system/01.CompileSystem/02.2.路径相关变量.md
+++ b/01.android_system/01.CompileSystem/02.2.路径相关变量.md
@@ -1,6 +1,22 @@
 
 
-##大多数的宏变量 定义位置：build/core/envsetup.mk
+#路径相关的变量
+
+大多数的宏变量 定义位置：build/core/envsetup.mk
+
+##编译使用路径
+TOPDIR  ./
+BUILD_SYSTEM  ./build/core
+
+
+##Out目录路径
+
+
+
+
+
+
+
 
 
 以release版本为例：
