--- a/01.android_system/01.CompileSystem/02.3.其他重要变量.md
+++ b/01.android_system/01.CompileSystem/02.3.其他重要变量.md
@@ -2,17 +2,39 @@
 ##DEVICE_PACKAGE_OVERLAYS := device/.../overlay #指定目录下的资源替换系统的资源
 
 
-##PRODUCT_COPY_FILES
 
-PRODUCT_COPY_FILES += \    #指定拷贝内容：源——>目标
- source_path:destination_path
 
-##PRODUCT_PROPERTY_OVERRIDES
 
-PRODUCT_PROPERTY_OVERRIDES += \   #
- key=value
 
-##PRODUCT_PACKAGES
+##PRODUCT_NAME	最终用户将看到的完整产品名，会出现在“关于手机”信息中。
+##PRODUCT_MODEL	产品的型号，这也是最终用户将看到的。
+##PRODUCT_LOCALES	该产品支持的地区，以空格分格，例如：en_GB de_DE es_ES fr_CA。
+##PRODUCT_DEVICE	该产品的工业设计的名称。
+##PRODUCT_MANUFACTURER	制造商的名称。
+##PRODUCT_BRAND	该产品专门定义的商标（如果有的话）。
 
-PRODUCT_PACKAGES += \    #定制软件
- xxx
+##PRODUCT_PACKAGES	该产品版本中包含的 APK 应用程序，以空格分格，例如：Calendar Contacts。
+
+    PRODUCT_PACKAGES += \    #定制软件
+     xxx
+
+
+##PRODUCT_PROPERTY_OVERRIDES	对于商品属性的定义。
+
+    PRODUCT_PROPERTY_OVERRIDES += \   #
+     key=value
+
+##PRODUCT_COPY_FILES	编译该产品时需要拷贝的文件，以“源路径 : 目标路径”的形式。
+
+    PRODUCT_COPY_FILES += \    #指定拷贝内容：源——>目标
+     source_path:destination_path
+
+##PRODUCT_OTA_PUBLIC_KEYS	对于该产品的 OTA 公开 key 的列表。
+
+##PRODUCT_POLICY	产品使用的策略。
+
+##PRODUCT_PACKAGE_OVERLAYS	指出是否要使用默认的资源或添加产品特定定义来覆盖。
+
+##PRODUCT_CONTRIBUTORS_FILE	HTML 文件，其中包含项目的贡献者。
+
+##PRODUCT_TAGS	该产品的标签，以空格分格。
