--- a/01.android_system/01.CompileSystem/11.include.md
+++ b/01.android_system/01.CompileSystem/11.include.md
@@ -1,18 +1,86 @@
+#include 相关的模板使用
+
+相关定义在build/core/config.mk
+对应的mk文件在build/core/目录下
+$(BUILD_SYSTEM) 就是build/core
+
+- host 便是编译主机
+- 没有 host表示目标设备
+- java 表示java库，没有java表示native库
+
 ##include $(CLEAR_VARS)
 
 include $(CLEAR_VARS) -清除之前的一些系统变量
 
+  CLEAR_VARS:= $(BUILD_SYSTEM)/clear_vars.mk
+
 ##include $(BUILD_PREBUILT)
 
 
-##BUILD_STATIC_LIBRARY   － 指明要编译成静态库
+##BUILD_STATIC_LIBRARY and BUILD_SHARED_LIBRARY
 
-    include $(BUILD_STATIC_LIBRARY)表示编译成静态库
+include $(BUILD_STATIC_LIBRARY)表示编译成静态库 c & c++
+include $(BUILD_SHARED_LIBRARY)表示编译成动态库。
 
-##BUILD_SHARED_LIBRARY  － 指明要编译成动态库
-
-    include $(BUILD_SHARED_LIBRARY)表示编译成动态库。
+    BUILD_STATIC_LIBRARY:= $(BUILD_SYSTEM)/static_library.mk
+    BUILD_SHARED_LIBRARY:= $(BUILD_SYSTEM)/shared_library.mk
 
 ##include $(BUILD_EXECUTABLE)
 
-    include $(BUILD_EXECUTABLE)表示编译成可执行程序
+include $(BUILD_EXECUTABLE)表示编译成可执行程序
+
+    BUILD_EXECUTABLE:= $(BUILD_SYSTEM)/executable.mk
+
+
+##BUILD_HOST_EXECUTABLE:= $(BUILD_SYSTEM)/host_executable.mk
+
+BUILD_HOST_EXECUTABLE:= $(BUILD_SYSTEM)/host_executable.mk
+
+##BUILD_PACKAGE:= $(BUILD_SYSTEM)/package.mk
+
+编译apk
+
+BUILD_PACKAGE:= $(BUILD_SYSTEM)/package.mk
+
+##BUILD_HOST_PREBUILT:= $(BUILD_SYSTEM)/host_prebuilt.mk
+
+BUILD_HOST_PREBUILT:= $(BUILD_SYSTEM)/host_prebuilt.mk
+
+##BUILD_PREBUILT:= $(BUILD_SYSTEM)/prebuilt.mk
+
+与编译so, apk
+
+BUILD_PREBUILT:= $(BUILD_SYSTEM)/prebuilt.mk
+
+##BUILD_MULTI_PREBUILT:= $(BUILD_SYSTEM)/multi_prebuilt.mk
+
+同时多个so库与编译，复制到同一个目标目录。
+
+BUILD_MULTI_PREBUILT:= $(BUILD_SYSTEM)/multi_prebuilt.mk
+
+##BUILD_JAVA_LIBRARY:= $(BUILD_SYSTEM)/java_library.mk
+BUILD_JAVA_LIBRARY:= $(BUILD_SYSTEM)/java_library.mk
+
+##BUILD_STATIC_JAVA_LIBRARY:= $(BUILD_SYSTEM)/static_java_library.mk
+BUILD_STATIC_JAVA_LIBRARY:= $(BUILD_SYSTEM)/static_java_library.mk
+
+##BUILD_HOST_JAVA_LIBRARY:= $(BUILD_SYSTEM)/host_java_library.mk
+BUILD_HOST_JAVA_LIBRARY:= $(BUILD_SYSTEM)/host_java_library.mk
+
+
+
+##说明
+
+host_static_library.mk	定义了如何编译主机上的静态库。
+host_shared_library.mk	定义了如何编译主机上的共享库。
+static_library.mk	定义了如何编译设备上的静态库。
+shared_library.mk	定义了如何编译设备上的共享库。
+executable.mk	定义了如何编译设备上的可执行文件。
+host_executable.mk	定义了如何编译主机上的可执行文件。
+package.mk	定义了如何编译 APK 文件。
+prebuilt.mk	定义了如何处理一个已经编译好的文件 ( 例如 Jar 包 )。
+multi_prebuilt.mk	定义了如何处理一个或多个已编译文件，该文件的实现依赖 prebuilt.mk。
+host_prebuilt.mk	处理一个或多个主机上使用的已编译文件，该文件的实现依赖 multi_prebuilt.mk。
+java_library.mk	定义了如何编译设备上的共享 Java 库。
+static_java_library.mk	定义了如何编译设备上的静态 Java 库。
+host_java_library.mk	定义了如何编译主机上的共享 Java 库。
