--- a/01.android_system/01.CompileSystem/10.call_functions.md
+++ b/01.android_system/01.CompileSystem/10.call_functions.md
@@ -40,3 +40,9 @@ include $(call all-subdir-makefiles)
 ##all-java-files-under
 
 LOCAL_SRC_FILES := $(call all-java-files-under, src)
+
+
+##$(call all-c-files-under, <src>)：获取指定目录下的所有 C 语言文件。
+
+##$(call all-Iaidl-files-under, <src>) ：获取指定目录下的所有 AIDL 文件。
+##$(call intermediates-dir-for, <class>, <app_name>, <host or target>, <common?> )：获取 Build 输出的目标文件夹路径。
