--- a/01.android_system/01.CompileSystem/02.3.其他重要变量.md
+++ b/01.android_system/01.CompileSystem/02.3.其他重要变量.md
@@ -21,13 +21,24 @@
 
 ##PRODUCT_PROPERTY_OVERRIDES	对于商品属性的定义。
 
-    PRODUCT_PROPERTY_OVERRIDES += \   #
-     key=value
+
+PRODUCT_PROPERTY_OVERRIDES := \
+    ro.ril.hsxpa=1 \
+    ro.ril.gprsclass=10 \
+    ro.adb.qemud=1
 
 ##PRODUCT_COPY_FILES	编译该产品时需要拷贝的文件，以“源路径 : 目标路径”的形式。
 
-    PRODUCT_COPY_FILES += \    #指定拷贝内容：源——>目标
-     source_path:destination_path
+
+PRODUCT_COPY_FILES := \
+    device/generic/goldfish/data/etc/apns-conf.xml:system/etc/apns-conf.xml \
+    device/generic/goldfish/camera/media_profiles.xml:system/etc/media_profiles.xml \
+    frameworks/av/media/libstagefright/data/media_codecs_google_audio.xml:system/etc/media_codecs_google_audio.xml \
+    frameworks/av/media/libstagefright/data/media_codecs_google_telephony.xml:system/etc/media_codecs_google_telephony.xml \
+    frameworks/av/media/libstagefright/data/media_codecs_google_video.xml:system/etc/media_codecs_google_video.xml \
+    device/generic/goldfish/camera/media_codecs.xml:system/etc/media_codecs.xml \
+    hardware/libhardware_legacy/audio/audio_policy.conf:system/etc/audio_policy.conf
+
 
 ##PRODUCT_OTA_PUBLIC_KEYS	对于该产品的 OTA 公开 key 的列表。
 
@@ -38,3 +49,17 @@
 ##PRODUCT_CONTRIBUTORS_FILE	HTML 文件，其中包含项目的贡献者。
 
 ##PRODUCT_TAGS	该产品的标签，以空格分格。
+
+
+
+##SHOW_COMMANDS
+
+打印和隐藏编译详细信息 ./build/core/config.mk
+
+
+# The 'showcommands' goal says to show the full command
+# lines being executed, instead of a short message about
+# the kind of operation being done.
+SHOW_COMMANDS:= $(filter showcommands,$(MAKECMDGOALS))
+
+make showcommands  -j4
