--- a/01.android_system/01.CompileSystem/10.call_functions.md
+++ b/01.android_system/01.CompileSystem/10.call_functions.md
@@ -46,3 +46,8 @@ LOCAL_SRC_FILES := $(call all-java-files-under, src)
 
 ##$(call all-Iaidl-files-under, <src>) ：获取指定目录下的所有 AIDL 文件。
 ##$(call intermediates-dir-for, <class>, <app_name>, <host or target>, <common?> )：获取 Build 输出的目标文件夹路径。
+
+
+##collapse-pairs 去重
+
+  $(call collapse-pairs, $(ADDITIONAL_BUILD_PROPERTIES))
