--- a/01.android_system/01.CompileSystem/02.2.路径相关变量.md
+++ b/01.android_system/01.CompileSystem/02.2.路径相关变量.md
@@ -4,155 +4,51 @@
 
 大多数的宏变量 定义位置：build/core/envsetup.mk
 
+debug, release, 路径不同，这里以release编译为准
+
+
 ##编译使用路径
 TOPDIR  ./
 BUILD_SYSTEM  ./build/core
 
 
 ##Out目录路径
+TOPDIR ./
+OUT_DIR ./out
+HOST_OUT_ROOT    ./out/host
 
+TARGET_OUT_ROOT  ./out/target
 
-
-
-
-
-
-
-
-以release版本为例：
-
-./  TOPDIR
-./out OUT_DIR
-./out/target    TARGET_OUT_ROOT
-./out/host      HOST_OUT
-out/target/product/xxx      PRODUCT_OUT
-out/target/product/xxx/recovery   TARGET_RECOVERY_OUT
-out/target/product/xxx/recovery/root   TARGET_RECOVERY_ROOT_OUT
-out/target/product/xxx/system   TARGET_OUT
-out/target/product/xxx/system/bin       TARGET_OUT_EXECUTABLES
-out/target/product/xxx/root           TARGET_OUT_ROOT
-out/target/product/xxx/symbols        TARGET_OUT_UNSTRIPPED
-
-##$(BUILD_SYSTEM)目录中，也就是build/core目录中
-
-##TOPDIR
-
-./
-
-顶层目录
-
-##OUT_DIR
-
-./out
-
-    ifeq (,$(strip $(OUT_DIR)))
-    OUT_DIR := $(TOPDIR)out
-    endif
-    DEBUG_OUT_DIR := $(OUT_DIR)/debug
-
-
-##TARGET_OUT_ROOT
-
-./out/target/
-
-  # Move the host or target under the debug/ directory
-  # if necessary.
-  TARGET_OUT_ROOT_release := $(OUT_DIR)/target
-  TARGET_OUT_ROOT_debug := $(DEBUG_OUT_DIR)/target
-  TARGET_OUT_ROOT := $(TARGET_OUT_ROOT_$(TARGET_BUILD_TYPE))
-
-##HOST_OUT
-
-./out/host/
-
-    HOST_OUT_ROOT_release := $(OUT_DIR)/host
-    HOST_OUT_ROOT_debug := $(DEBUG_OUT_DIR)/host
-    HOST_OUT_ROOT := $(HOST_OUT_ROOT_$(HOST_BUILD_TYPE))
-    HOST_OUT_release := $(HOST_OUT_ROOT_release)/$(HOST_OS)-$(HOST_ARCH)
-    HOST_OUT_debug := $(HOST_OUT_ROOT_debug)/$(HOST_OS)-$(HOST_ARCH)
-    HOST_OUT := $(HOST_OUT_$(HOST_BUILD_TYPE))
-
-##PRODUCT_OUT
-
-out/target/product/xxx的宏即为:PRODUCT_OUT
-
-
-
-    ifeq ($(TARGET_SIMULATOR),true )
-    　# Any arch- or os-specific parts of the simulator (everything
-    　# under product/) are actually host-dependent.
-    　# But, the debug type is controlled by TARGET_BUILD_TYPE and not
-    　# HOST_BUILD_TYPE.
-    　TARGET_PRODUCT_OUT_ROOT := $(HOST_OUT_$(TARGET_BUILD_TYPE))/product
-    else
-    　TARGET_PRODUCT_OUT_ROOT := $(TARGET_OUT_ROOT)/product
-    endif
+    TARGET_PRODUCT_OUT_ROOT := $(TARGET_OUT_ROOT)/product
     TARGET_COMMON_OUT_ROOT := $(TARGET_OUT_ROOT)/common
-    HOST_COMMON_OUT_ROOT := $(HOST_OUT_ROOT)/common
-    PRODUCT_OUT := $(TARGET_PRODUCT_OUT_ROOT)/$(TARGET_DEVICE)
+
+PRODUCT_OUT     out/target/product/xxx      
+
+      TARGET_OUT_INTERMEDIATES := $(PRODUCT_OUT)/obj
+      TARGET_OUT_HEADERS := $(TARGET_OUT_INTERMEDIATES)/include
+      TARGET_OUT_INTERMEDIATE_LIBRARIES := $(TARGET_OUT_INTERMEDIATES)/lib
+      TARGET_OUT_COMMON_INTERMEDIATES := $(TARGET_COMMON_OUT_ROOT)/obj
+      TARGET_OUT_GEN := $(PRODUCT_OUT)/gen
+      TARGET_OUT_COMMON_GEN := $(TARGET_COMMON_OUT_ROOT)/gen
+
+TARGET_OUT   out/target/product/xxx/system
+
+      TARGET_OUT_EXECUTABLES := $(TARGET_OUT)/bin
+      TARGET_OUT_OPTIONAL_EXECUTABLES := $(TARGET_OUT)/xbin
+      TARGET_OUT_SHARED_LIBRARIES := $(TARGET_OUT)/lib
+      TARGET_OUT_JAVA_LIBRARIES := $(TARGET_OUT)/framework
+      TARGET_OUT_APPS := $(TARGET_OUT)/app
+      TARGET_OUT_APPS_PRIVILEGED := $(TARGET_OUT)/priv-app
+      TARGET_OUT_KEYLAYOUT := $(TARGET_OUT)/usr/keylayout
+      TARGET_OUT_KEYCHARS := $(TARGET_OUT)/usr/keychars
+      TARGET_OUT_ETC := $(TARGET_OUT)/etc
+      TARGET_OUT_NOTICE_FILES := $(TARGET_OUT_INTERMEDIATES)/NOTICE_FILES
+      TARGET_OUT_FAKE := $(PRODUCT_OUT)/fake_packages
 
 
+TARGET_ROOT_OUT  out/target/product/xxx/root
 
-  TARGET_RECOVERY_OUT := $(PRODUCT_OUT)/recovery
-  TARGET_RECOVERY_ROOT_OUT := $(TARGET_RECOVERY_OUT)/root
-  TARGET_SYSLOADER_OUT := $(PRODUCT_OUT)/sysloader
-  TARGET_SYSLOADER_ROOT_OUT := $(TARGET_SYSLOADER_OUT)/root
-  TARGET_SYSLOADER_SYSTEM_OUT := $(TARGET_SYSLOADER_OUT)/root/system
-  TARGET_INSTALLER_OUT := $(PRODUCT_OUT)/installer
-  TARGET_INSTALLER_DATA_OUT := $(TARGET_INSTALLER_OUT)/data
-  TARGET_INSTALLER_ROOT_OUT := $(TARGET_INSTALLER_OUT)/root
-  TARGET_INSTALLER_SYSTEM_OUT := $(TARGET_INSTALLER_OUT)/root/system
-
-##TARGET_OUT
-out/target/product/xxx/system的宏即为:TARGET_OUT
-
-  TARGET_OUT := $(PRODUCT_OUT)/system
-  TARGET_OUT_EXECUTABLES:= $(TARGET_OUT)/bin
-  TARGET_OUT_OPTIONAL_EXECUTABLES:= $(TARGET_OUT)/xbin
-  TARGET_OUT_SHARED_LIBRARIES:= $(TARGET_OUT)/lib
-  TARGET_OUT_JAVA_LIBRARIES:= $(TARGET_OUT)/framework
-  TARGET_OUT_APPS:= $(TARGET_OUT)/app
-  TARGET_OUT_KEYLAYOUT := $(TARGET_OUT)/usr/keylayout
-  TARGET_OUT_KEYCHARS := $(TARGET_OUT)/usr/keychars
-  TARGET_OUT_ETC := $(TARGET_OUT)/etc
-  TARGET_OUT_STATIC_LIBRARIES:= $(TARGET_OUT_INTERMEDIATES)/lib
-  TARGET_OUT_NOTICE_FILES:=$(TARGET_OUT_INTERMEDIATES)/NOTICE_FILES
-  TARGET_OUT_DATA := $(PRODUCT_OUT)/data
-  TARGET_OUT_DATA_EXECUTABLES:= $(TARGET_OUT_EXECUTABLES)
-  TARGET_OUT_DATA_SHARED_LIBRARIES:= $(TARGET_OUT_SHARED_LIBRARIES)
-  TARGET_OUT_DATA_JAVA_LIBRARIES:= $(TARGET_OUT_JAVA_LIBRARIES)
-  TARGET_OUT_DATA_APPS:= $(TARGET_OUT_DATA)/app
-  TARGET_OUT_DATA_KEYLAYOUT := $(TARGET_OUT_KEYLAYOUT)
-  TARGET_OUT_DATA_KEYCHARS := $(TARGET_OUT_KEYCHARS)
-  TARGET_OUT_DATA_ETC := $(TARGET_OUT_ETC)
-  TARGET_OUT_DATA_STATIC_LIBRARIES:= $(TARGET_OUT_STATIC_LIBRARIES)
-
-##TARGET_ROOT_OUT
-out/target/product/xxx/root的宏即为：TARGET_ROOT_OUT，
-
-  TARGET_ROOT_OUT := $(PRODUCT_OUT)/root
-  TARGET_ROOT_OUT_BIN := $(TARGET_ROOT_OUT)/bin
-  TARGET_ROOT_OUT_SBIN := $(TARGET_ROOT_OUT)/sbin
-  TARGET_ROOT_OUT_ETC := $(TARGET_ROOT_OUT)/etc
-  TARGET_ROOT_OUT_USR := $(TARGET_ROOT_OUT)/usr
-
-
-
-
-##其他
-
-
-    TARGET_OUT_EXECUTABLES_UNSTRIPPED := $(TARGET_OUT_UNSTRIPPED)/system/bin
-    TARGET_OUT_SHARED_LIBRARIES_UNSTRIPPED := $(TARGET_OUT_UNSTRIPPED)/system/lib
-    TARGET_ROOT_OUT_UNSTRIPPED := $(TARGET_OUT_UNSTRIPPED)
-    TARGET_ROOT_OUT_SBIN_UNSTRIPPED := $(TARGET_OUT_UNSTRIPPED)/sbin
-    TARGET_ROOT_OUT_BIN_UNSTRIPPED := $(TARGET_OUT_UNSTRIPPED)/bin
-
-    COMMON_MODULE_CLASSES := JAVA_LIBRARIES NOTICE_FILES
-
-
-
-## 其它的环境变量
-
-
-###BUILD_SYSTEM
+      TARGET_ROOT_OUT_BIN := $(TARGET_ROOT_OUT)/bin
+      TARGET_ROOT_OUT_SBIN := $(TARGET_ROOT_OUT)/sbin
+      TARGET_ROOT_OUT_ETC := $(TARGET_ROOT_OUT)/etc
+      TARGET_ROOT_OUT_USR := $(TARGET_ROOT_OUT)/usr
