update more for input system

--- a/01.android_system/02.Framework/InputSystem/03.files.md
+++ b/01.android_system/02.Framework/InputSystem/03.files.md
@@ -1,71 +1,418 @@
 
+#代码索引
 
-frameworks/native/services/inputflinger
-frameworks/base/services/core/jni
+##InputManagerService创建
 
-
-
-
-
-frameworks/native/services/inputflinger
-├── Android.mk
-├── EventHub.cpp
-├── EventHub.h
-├── host
-│   ├── Android.mk
-│   ├── InputDriver.cpp
-│   ├── InputDriver.h
-│   ├── InputFlinger.cpp
-│   ├── InputFlinger.h
-│   ├── InputHost.cpp
-│   ├── InputHost.h
-│   └── main.cpp
-├── InputApplication.cpp
-├── InputApplication.h
-├── InputDispatcher.cpp
-├── InputDispatcher.h
-├── InputListener.cpp
-├── InputListener.h
-├── InputManager.cpp
-├── InputManager.h
-├── InputReader.cpp
-├── InputReader.h
-├── InputWindow.cpp
-├── InputWindow.h
-├── PointerControllerInterface.h
-└── tests
-    ├── Android.mk
-    ├── InputDispatcher_test.cpp
-    └── InputReader_test.cpp
+###SystemServer.java (mermaid\frameworks\base\services\java\com\android\server)	54479	7/4/2016
 
 
+            Slog.i(TAG, "Input Manager");
+            inputManager = new InputManagerService(context);
 
-frameworks/base/services/core/jni
-├── Android.mk
-├── com_android_server_AlarmManagerService.cpp
-├── com_android_server_am_ActivityManagerService.cpp
-├── com_android_server_am_BatteryStatsService.cpp
-├── com_android_server_AssetAtlasService.cpp
-├── com_android_server_connectivity_Vpn.cpp
-├── com_android_server_ConsumerIrService.cpp
-├── com_android_server_fingerprint_FingerprintService.cpp
-├── com_android_server_hdmi_HdmiCecController.cpp
-├── com_android_server_input_InputApplicationHandle.cpp
-├── com_android_server_input_InputApplicationHandle.h
-├── com_android_server_input_InputManagerService.cpp
-├── com_android_server_input_InputWindowHandle.cpp
-├── com_android_server_input_InputWindowHandle.h
-├── com_android_server_lights_LightsService.cpp
-├── com_android_server_location_FlpHardwareProvider.cpp
-├── com_android_server_location_GpsLocationProvider.cpp
-├── com_android_server_PersistentDataBlockService.cpp
-├── com_android_server_power_PowerManagerService.cpp
-├── com_android_server_power_PowerManagerService.h
-├── com_android_server_SerialService.cpp
-├── com_android_server_SystemServer.cpp
-├── com_android_server_tv_TvInputHal.cpp
-├── com_android_server_UsbDeviceManager.cpp
-├── com_android_server_UsbHostManager.cpp
-├── com_android_server_UsbMidiDevice.cpp
-├── com_android_server_VibratorService.cpp
-└── onload.cpp
+            Slog.i(TAG, "Window Manager");
+            wm = WindowManagerService.main(context, inputManager,
+                    mFactoryTestMode != FactoryTest.FACTORY_TEST_LOW_LEVEL,
+                    !mFirstBoot, mOnlyCore);
+            ServiceManager.addService(Context.WINDOW_SERVICE, wm);
+            ServiceManager.addService(Context.INPUT_SERVICE, inputManager);
+
+            mActivityManagerService.setWindowManager(wm);
+
+            inputManager.setWindowManagerCallbacks(wm.getInputMonitor());
+            inputManager.start();
+
+
+###InputManagerService.java (mermaid\frameworks\base\services\core\java\com\android\server\input)	78202	7/4/2016
+
+
+    public InputManagerService(Context context) {
+        this.mContext = context;
+        this.mHandler = new InputManagerHandler(DisplayThread.get().getLooper());
+
+        mUseDevInputEventForAudioJack =
+                context.getResources().getBoolean(R.bool.config_useDevInputEventForAudioJack);
+        Slog.i(TAG, "Initializing input manager, mUseDevInputEventForAudioJack="
+                + mUseDevInputEventForAudioJack);
+        mPtr = nativeInit(this, mContext, mHandler.getLooper().getQueue());
+
+        LocalServices.addService(InputManagerInternal.class, new LocalService());
+    }
+
+
+###nativeInit com_android_server_input_InputManagerService.cpp (mermaid\frameworks\base\services\core\jni)	59925	7/4/2016
+
+
+
+
+    static jlong nativeInit(JNIEnv* env, jclass /* clazz */,
+            jobject serviceObj, jobject contextObj, jobject messageQueueObj) {
+        sp<MessageQueue> messageQueue = android_os_MessageQueue_getMessageQueue(env, messageQueueObj);
+        if (messageQueue == NULL) {
+            jniThrowRuntimeException(env, "MessageQueue is not initialized.");
+            return 0;
+        }
+
+        NativeInputManager* im = new NativeInputManager(contextObj, serviceObj,
+                messageQueue->getLooper());
+        im->incStrong(0);
+        return reinterpret_cast<jlong>(im);
+    }
+
+
+###create NativeInputManager
+
+
+
+
+    NativeInputManager::NativeInputManager(jobject contextObj,
+            jobject serviceObj, const sp<Looper>& looper) :
+            mLooper(looper), mInteractive(true) {
+        JNIEnv* env = jniEnv();
+
+        mContextObj = env->NewGlobalRef(contextObj);
+        mServiceObj = env->NewGlobalRef(serviceObj);
+
+        {
+            AutoMutex _l(mLock);
+            mLocked.systemUiVisibility = ASYSTEM_UI_VISIBILITY_STATUS_BAR_VISIBLE;
+            mLocked.pointerSpeed = 0;
+            mLocked.pointerGesturesEnabled = true;
+            mLocked.showTouches = false;
+        }
+        mInteractive = true;
+
+        sp<EventHub> eventHub = new EventHub();
+        mInputManager = new InputManager(eventHub, this, this);
+    }
+
+###EventHub EventHub.cpp (mermaid\frameworks\native\services\inputflinger)	64190	7/4/2016
+
+###InputManager InputManager.cpp (mermaid\frameworks\native\services\inputflinger)	2586	7/4/2016
+
+
+
+    InputManager::InputManager(
+            const sp<EventHubInterface>& eventHub,
+            const sp<InputReaderPolicyInterface>& readerPolicy,
+            const sp<InputDispatcherPolicyInterface>& dispatcherPolicy) {
+        mDispatcher = new InputDispatcher(dispatcherPolicy);
+        mReader = new InputReader(eventHub, readerPolicy, mDispatcher);
+        initialize();
+    }
+
+
+    void InputManager::initialize() {
+        mReaderThread = new InputReaderThread(mReader);
+        mDispatcherThread = new InputDispatcherThread(mDispatcher);
+    }
+
+
+##InputReaderThread  InputReader.cpp (mermaid\frameworks\native\services\inputflinger)	282790	7/4/2016
+
+
+    InputReaderThread::InputReaderThread(const sp<InputReaderInterface>& reader) :
+            Thread(/*canCallJava*/ true), mReader(reader) {
+    }
+
+    InputReaderThread::~InputReaderThread() {
+    }
+
+    bool InputReaderThread::threadLoop() {
+        mReader->loopOnce();
+        return true;
+    }
+
+
+mEventHub->getEvents => processEventsLocked =>mQueuedListener->flush();
+
+
+### flush queue
+
+    void QueuedInputListener::flush() {
+        size_t count = mArgsQueue.size();
+        for (size_t i = 0; i < count; i++) {
+            NotifyArgs* args = mArgsQueue[i];
+            args->notify(mInnerListener);
+            delete args;
+        }
+        mArgsQueue.clear();
+    }
+
+
+
+    /* Superclass of all input event argument objects */
+    struct NotifyArgs {
+        virtual ~NotifyArgs() { }
+
+        virtual void notify(const sp<InputListenerInterface>& listener) const = 0;
+    };
+
+
+
+
+NotifyKeyArgs 继承  NotifyArgs
+
+
+    void NotifyKeyArgs::notify(const sp<InputListenerInterface>& listener) const {
+        listener->notifyKey(this);
+    }
+
+还要看 mInnerListener 在哪里
+
+
+  InputReader::InputReader(const sp<EventHubInterface>& eventHub,
+          const sp<InputReaderPolicyInterface>& policy,
+          const sp<InputListenerInterface>& listener) :
+          mContext(this), mEventHub(eventHub), mPolicy(policy),
+          mGlobalMetaState(0), mGeneration(1),
+          mDisableVirtualKeysTimeout(LLONG_MIN), mNextTimeout(LLONG_MAX),
+          mConfigurationChangesToRefresh(0) {
+      mQueuedListener = new QueuedInputListener(listener);
+
+      { // acquire lock
+          AutoMutex _l(mLock);
+
+          refreshConfigurationLocked(0);
+          updateGlobalMetaStateLocked();
+      } // release lock
+  }
+
+再看InputReader是如何创建的
+
+  InputManager::InputManager(
+          const sp<EventHubInterface>& eventHub,
+          const sp<InputReaderPolicyInterface>& readerPolicy,
+          const sp<InputDispatcherPolicyInterface>& dispatcherPolicy) {
+      mDispatcher = new InputDispatcher(dispatcherPolicy);
+      mReader = new InputReader(eventHub, readerPolicy, mDispatcher);
+      initialize();
+  }
+
+**mDispatcher就是QueuedInputListener flush使用的mInnerListener**
+
+以按键事件为例，最后会调用到InputDispatcher的notifyKey()函数中。
+
+##Dispatcher
+
+InputDispatcher中的notifyKey, interceptKeyBeforeQueueing
+
+    KeyEvent event;
+    event.initialize(args->deviceId, args->source, args->action,
+            flags, keyCode, args->scanCode, metaState, 0,
+            args->downTime, args->eventTime);
+
+    mPolicy->interceptKeyBeforeQueueing(&event, /*byref*/ policyFlags);
+
+
+入对列
+
+        int32_t repeatCount = 0;
+        KeyEntry* newEntry = new KeyEntry(args->eventTime,
+                args->deviceId, args->source, policyFlags,
+                args->action, flags, keyCode, args->scanCode,
+                metaState, repeatCount, args->downTime);
+
+        needWake = enqueueInboundEventLocked(newEntry);
+
+其中，加入的队列是：
+
+      mInboundQueue.enqueueAtTail(entry);
+
+##dispatchOnce
+
+1. dispatchOnceInnerLocked
+
+2. runCommandsLockedInterruptible
+
+3. mLooper->pollOnce(timeoutMillis);
+
+
+###dispatchOnceInnerLocked
+
+  done = dispatchKeyLocked(currentTime, typedEntry, &dropReason, nextWakeupTime);
+
+
+其中
+
+   if (entry->policyFlags & POLICY_FLAG_PASS_TO_USER) {
+              CommandEntry* commandEntry = postCommandLocked(
+                      & InputDispatcher::doInterceptKeyBeforeDispatchingLockedInterruptible);
+              if (mFocusedWindowHandle != NULL) {
+                  commandEntry->inputWindowHandle = mFocusedWindowHandle;
+              }
+              commandEntry->keyEntry = entry;
+              entry->refCount += 1;
+              return false; // wait for the command to run
+          }
+
+如果是个需要系统处理的Key事件，这里会封装成CommandEntry插入到mCommandQueue队列中，后面的runCommandLockedInterruptible()函数中会调用doInterceptKeyBeforeDispatchingLockedInterruptible()来让PWM有机会进行处理。
+
+否则的话
+
+    // Dispatch the key.
+    dispatchEventLocked(currentTime, entry, inputTargets);
+
+->
+
+    prepareDispatchCycleLocked(currentTime, connection, eventEntry, &inputTarget);
+
+->
+
+    enqueueDispatchEntriesLocked(currentTime, connection,
+                    splitMotionEntry, inputTarget);
+
+第一步->
+
+
+    // Enqueue the dispatch entry.
+    connection->outboundQueue.enqueueAtTail(dispatchEntry);
+
+第二步 ->
+
+
+      // If the outbound queue was previously empty, start the dispatch cycle going.
+      if (wasEmpty && !connection->outboundQueue.isEmpty()) {
+          startDispatchCycleLocked(currentTime, connection);
+      }
+
+startDispatchCycleLocked
+
+Publish the key event.
+
+            // Publish the key event.
+            status = connection->inputPublisher.publishKeyEvent(dispatchEntry->seq,
+                    keyEntry->deviceId, keyEntry->source,
+                    dispatchEntry->resolvedAction, dispatchEntry->resolvedFlags,
+                    keyEntry->keyCode, keyEntry->scanCode,
+                    keyEntry->metaState, keyEntry->repeatCount, keyEntry->downTime,
+                    keyEntry->eventTime);
+
+Re-enqueue the event on the wait queue.
+
+        // Re-enqueue the event on the wait queue.
+        connection->outboundQueue.dequeue(dispatchEntry);
+        traceOutboundQueueLengthLocked(connection);
+        connection->waitQueue.enqueueAtTail(dispatchEntry);
+        traceWaitQueueLengthLocked(connection);
+
+
+publishKeyEvent->mChannel->sendMessage(&msg)->send(mFd, msg, msgLength, MSG_DONTWAIT | MSG_NOSIGNAL);
+
+
+
+runCommandsLockedInterruptible
+
+之后的event还在队列里面，下次还可以处理。
+
+
+##APP端  WindowInputEventReceiver
+
+ViewRootImpl.java
+
+      public void setView(View view, WindowManager.LayoutParams attrs, View panelParentView) {
+      ......
+         mInputEventReceiver = new WindowInputEventReceiver(mInputChannel,
+                            Looper.myLooper());
+      ......
+
+WindowInputEventReceiver
+
+    final class WindowInputEventReceiver extends InputEventReceiver {
+
+InputEventReceiver
+
+   public InputEventReceiver(InputChannel inputChannel, Looper looper) {
+          if (inputChannel == null) {
+              throw new IllegalArgumentException("inputChannel must not be null");
+          }
+          if (looper == null) {
+              throw new IllegalArgumentException("looper must not be null");
+          }
+
+          mInputChannel = inputChannel;
+          mMessageQueue = looper.getQueue();
+          mReceiverPtr = nativeInit(new WeakReference<InputEventReceiver>(this),
+                  inputChannel, mMessageQueue);
+
+          mCloseGuard.open("dispose");
+      }
+
+android_view_InputEventReceiver.cpp (mermaid\frameworks\base\core\jni)	16115	7/4/2016
+
+
+    static jlong nativeInit(JNIEnv* env, jclass clazz, jobject receiverWeak,
+            jobject inputChannelObj, jobject messageQueueObj) {
+        .....
+        sp<NativeInputEventReceiver> receiver = new NativeInputEventReceiver(env,
+                receiverWeak, inputChannel, messageQueue);
+        status_t status = receiver->initialize();
+        ......
+    }
+
+初始化完后，这个连接的fd就被挂到主线程的等待fd集合去了(InputEventReceiver::nativeInit())。也就是说，当连接上有消息来，主线程就会调用相应的回调处理NativeInputEventReceiver::handleEvent()。
+
+
+
+    int NativeInputEventReceiver::handleEvent(int receiveFd, int events, void* data){
+
+      consumeEvents
+        ->  env->CallVoidMethod(receiverObj.get(),
+                        gInputEventReceiverClassInfo.dispatchInputEvent, seq, inputEventObj);
+
+callback to WindowInputEventReceiver
+
+
+      public void dispatchInputEvent(InputEvent event, InputEventReceiver receiver) {
+          SomeArgs args = SomeArgs.obtain();
+          args.arg1 = event;
+          args.arg2 = receiver;
+          Message msg = mHandler.obtainMessage(MSG_DISPATCH_INPUT_EVENT, args);
+          msg.setAsynchronous(true);
+          mHandler.sendMessage(msg);
+      }
+
+
+handler
+
+    case MSG_DISPATCH_INPUT_EVENT: {
+                SomeArgs args = (SomeArgs)msg.obj;
+                InputEvent event = (InputEvent)args.arg1;
+                InputEventReceiver receiver = (InputEventReceiver)args.arg2;
+                enqueueInputEvent(event, receiver, 0, true);
+                args.recycle();
+            } break;
+
+->
+
+    doProcessInputEvents();
+
+->
+
+    deliverInputEvent(q);
+
+
+->
+
+    processKeyEvent
+
+->
+
+    final class ViewPostImeInputStage extends InputStage {
+    ......
+      private int processKeyEvent(QueuedInputEvent q) {
+    ......
+      if (mView.dispatchKeyEvent(event)) {
+                return FINISH_HANDLED;
+            }
+
+->
+
+    finishInputEvent(q);
+
+->
+
+      nativeFinishInputEvent(mReceiverPtr, seq, handled);
+
+->
+
+      status_t status = mInputConsumer.sendFinishedSignal(seq, handled);
